; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/file/extr_config_file.c_config_sort_compare_func.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/file/extr_config_file.c_config_sort_compare_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_entry_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.config_entry_list*, %struct.config_entry_list*)* @config_sort_compare_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @config_sort_compare_func(%struct.config_entry_list* %0, %struct.config_entry_list* %1) #0 {
  %3 = alloca %struct.config_entry_list*, align 8
  %4 = alloca %struct.config_entry_list*, align 8
  store %struct.config_entry_list* %0, %struct.config_entry_list** %3, align 8
  store %struct.config_entry_list* %1, %struct.config_entry_list** %4, align 8
  %5 = load %struct.config_entry_list*, %struct.config_entry_list** %3, align 8
  %6 = icmp ne %struct.config_entry_list* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %2
  %8 = load %struct.config_entry_list*, %struct.config_entry_list** %4, align 8
  %9 = icmp ne %struct.config_entry_list* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %7
  %11 = load %struct.config_entry_list*, %struct.config_entry_list** %3, align 8
  %12 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.config_entry_list*, %struct.config_entry_list** %4, align 8
  %15 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @strcasecmp(i32 %13, i32 %16)
  br label %19

18:                                               ; preds = %7, %2
  br label %19

19:                                               ; preds = %18, %10
  %20 = phi i32 [ %17, %10 ], [ 0, %18 ]
  ret i32 %20
}

declare dso_local i32 @strcasecmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
